# DocChatAI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  langgraph.json  pyproject.toml
.streamlit/: config.toml
src/: about.py  app.py  logger.py  utils.py
src/core/: embeddings.py  exportpdf.py  llm_models.py  loaders.py  vectorstore.py
src/core/models/: GradeDocument.py
src/retrieval_graph/: edges.py  graph.py  node.py  prompt.py  state.py  tools.py
src/ui/: chatdisplay.py  exporter.py  pdfload.py  worker.py
src/ui/models/: ProcessDocsResult.py
